--- a/ejat-parent/ejat/pom.xml
+++ b/ejat-parent/ejat/pom.xml
@@ -16,7 +16,7 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				ejat-parent/ejat-framework/pom.xml
+				<version>3.5.0</version>
 				<extensions>true</extensions>
 			</plugin>
 		</plugins>
