--- a/ejat-parent/ejat-obr/pom.xml
+++ b/ejat-parent/ejat-obr/pom.xml
@@ -6,7 +6,7 @@
 	
 	<name>ejat-obr</name>
 	
-	<artifactId>ejat</artifactId>
+	<artifactId>ejat-obr</artifactId>
 	<version>3.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<groupId>ejat</groupId>
