--- a/ejat-parent/ejat-maven-plugin/pom.xml
+++ b/ejat-parent/ejat-maven-plugin/pom.xml
@@ -8,6 +8,6 @@
 	
 	<artifactId>ejat-maven-plugin</artifactId>
 	<version>3.0.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<groupId>ejat</groupId>
 </project>
