--- a/ejat-parent/ejat-bom/pom.xml
+++ b/ejat-parent/ejat-bom/pom.xml
@@ -5,7 +5,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<artifactId>ejat-bom</artifactId>
-	<version>3.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<groupId>ejat</groupId>
+	<parent>
+		<groupId>ejat</groupId>
+		<artifactId>ejat-parent</artifactId>
+		<version>3.0.0-SNAPSHOT</version>
+	</parent>
 </project>
