--- a/ejat-parent/ejat-framework/pom.xml
+++ b/ejat-parent/ejat-framework/pom.xml
@@ -5,9 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<artifactId>ejat-framework</artifactId>
-	<version>3.0.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
-	<groupId>ejat</groupId>
 	
 	<build>
 		<plugins>
@@ -20,4 +18,9 @@
 		</plugins>
 	</build>
 	
+	<parent>
+		<groupId>ejat</groupId>
+		<artifactId>ejat-parent</artifactId>
+		<version>3.0.0-SNAPSHOT</version>
+	</parent>
 </project>
