--- a/ejat-parent/ejat-maven-plugin/pom.xml
+++ b/ejat-parent/ejat-maven-plugin/pom.xml
@@ -7,5 +7,9 @@
 	<artifactId>ejat-maven-plugin</artifactId>
 	<version>3.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<groupId>ejat</groupId>
+	<parent>
+		<groupId>ejat</groupId>
+		<artifactId>ejat-parent</artifactId>
+		<version>3.0.0-SNAPSHOT</version>
+	</parent>
 </project>
