--- a/ejat-parent/ejat-framework/pom.xml
+++ b/ejat-parent/ejat-framework/pom.xml
@@ -5,18 +5,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<artifactId>ejat-framework</artifactId>
+	<version>3.0.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
-	
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<version>3.5.0</version>
-				<extensions>true</extensions>
-			</plugin>
-		</plugins>
-	</build>
 	
 	<parent>
 		<groupId>ejat</groupId>
