--- a/ejat-parent/pom.xml
+++ b/ejat-parent/pom.xml
@@ -41,6 +41,13 @@
 			</plugins>
 		</pluginManagement>
 
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+			</plugin>
+		</plugins>
+			
 		<resources>
 			<resource>
 				<directory>src/main/java</directory>
