--- a/ejat-parent/pom.xml
+++ b/ejat-parent/pom.xml
@@ -3,22 +3,22 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<name>ejat</name>
-	
+
 	<groupId>ejat</groupId>
 	<artifactId>ejat-parent</artifactId>
 	<version>3.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	
+
 	<modules>
 		<module>ejat-maven-plugin</module>
-		<module>ejat</module>		
+		<module>ejat</module>
 		<module>ejat-framework</module>
 		<module>ejat-bom</module>
 		<module>ejat-obr</module>
 	</modules>
-	
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -27,8 +27,22 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
 	</properties>
-	
-	<build>	
+
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.osgi.service.obr</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+	</dependencies>
+
+	<build>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -46,7 +60,7 @@
 				<artifactId>maven-bundle-plugin</artifactId>
 			</plugin>
 		</plugins>
-			
+
 		<resources>
 			<resource>
 				<directory>src/main/java</directory>
@@ -54,9 +68,9 @@
 			<resource>
 				<directory>src/main/resources</directory>
 			</resource>
-		</resources>		
+		</resources>
 	</build>
-	
+
 	<distributionManagement>
 		<repository>
 			<id>ejat.repo</id>
@@ -67,13 +81,5 @@
 			<url>${ejat.distribution.repo}</url>
 		</snapshotRepository>
 	</distributionManagement>
-	
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.osgi.service.obr</artifactId>
-			<version>1.0.2</version>
-		</dependency>
-	</dependencies>
-	
+
 </project>
