Correct .gitignore in sub projects for #30

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-**/.settings/
-**/.project
-**/.classpath
-**/target
+target/
+.settings/
+.project
+.classpath
+.factorypath
+.apt_generated/
+.apt_generated_tests/
