--- a/ejat-parent/pom.xml
+++ b/ejat-parent/pom.xml
@@ -40,6 +40,13 @@
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13-beta-1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
