--- a/ejat-parent/ejat-bom/pom.xml
+++ b/ejat-parent/ejat-bom/pom.xml
@@ -3,14 +3,26 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<artifactId>ejat-bom</artifactId>
 	<version>3.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	
+
 	<parent>
 		<groupId>ejat</groupId>
 		<artifactId>ejat-parent</artifactId>
 		<version>3.0.0-SNAPSHOT</version>
 	</parent>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>ejat</groupId>
+				<artifactId>ejat-framework</artifactId>
+				<version>3.0.0-SNAPSHOT</version>
+				<type>bundle</type>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	
 </project>
