--- a/ejat-parent/ejat-bom/pom.xml
+++ b/ejat-parent/ejat-bom/pom.xml
@@ -4,18 +4,19 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<groupId>ejat</groupId>
 	<artifactId>ejat-bom</artifactId>
 	<version>3.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
-	<parent>
-		<groupId>ejat</groupId>
-		<artifactId>ejat-parent</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
-	</parent>
-
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>ejat</groupId>
+				<artifactId>ejat</artifactId>
+				<version>3.0.0-SNAPSHOT</version>
+				<type>bundle</type>
+			</dependency>
 			<dependency>
 				<groupId>ejat</groupId>
 				<artifactId>ejat-framework</artifactId>
