--- a/ejat-parent/ejat/pom.xml
+++ b/ejat-parent/ejat/pom.xml
@@ -3,14 +3,35 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
-	<artifactId>ejat</artifactId>
-	<version>3.0.0-SNAPSHOT</version>
-	<packaging>bundle</packaging>
-	
+
 	<parent>
 		<groupId>ejat</groupId>
 		<artifactId>ejat-parent</artifactId>
 		<version>3.0.0-SNAPSHOT</version>
 	</parent>
+
+	<artifactId>ejat</artifactId>
+	<version>3.0.0-SNAPSHOT</version>
+	<packaging>bundle</packaging>
+
+	<name>eJAT Framework</name>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
+				<configuration>
+					<supportedProjectTypes>bundle</supportedProjectTypes>
+					<instructions>
+						<Bundle-Version>$[versionmask;===;$[maven_version;${project.version}]].${maven.build.timestamp}</Bundle-Version>
+						<Bundle-SymbolicName>io.ejat</Bundle-SymbolicName>
+						<Private-Package>io.ejat.internal.*</Private-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
