correct junit and add mockito (#53)

--- a/ejat-parent/pom.xml
+++ b/ejat-parent/pom.xml
@@ -56,7 +56,13 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.13-beta-1</version>
+				<version>4.12</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				<version>2.24.0</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -75,6 +81,12 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
