--- a/ejat-parent/ejat-obr/pom.xml
+++ b/ejat-parent/ejat-obr/pom.xml
@@ -4,16 +4,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<artifactId>ejat-obr</artifactId>
-	<packaging>pom</packaging>
-
-	<name>eJAT POM</name>
-	
 	<parent>
 		<groupId>ejat</groupId>
 		<artifactId>ejat-parent</artifactId>
 		<version>3.0.0-SNAPSHOT</version>
 	</parent>
+
+	<artifactId>ejat-obr</artifactId>
+	<packaging>ejat-obr</packaging>
+
+	<name>eJAT OBR</name>
+	
 	<dependencies>
 		<dependency>
 			<groupId>ejat</groupId>
@@ -25,25 +26,6 @@
 			<artifactId>ejat-framework</artifactId>
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
-
 	</dependencies>	
 	
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>ejat</groupId>
-				<artifactId>ejat-maven-plugin</artifactId>
-				<version>3.0.0-SNAPSHOT</version>
-				<executions>
-					<execution>
-						<id>collect</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>obrresources</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
 </project>
