--- a/ejat-parent/pom.xml
+++ b/ejat-parent/pom.xml
@@ -112,6 +112,12 @@
 				</plugin>
 
 				<plugin>
+					<groupId>ejat</groupId>
+					<artifactId>ejat-maven-plugin</artifactId>
+					<version>3.0.0-SNAPSHOT</version>
+				</plugin>
+
+				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
 					<version>0.8.2</version>
@@ -131,6 +137,11 @@
 		</pluginManagement>
 
 		<plugins>
+			<plugin>
+				<groupId>ejat</groupId>
+				<artifactId>ejat-maven-plugin</artifactId>
+				<extensions>true</extensions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
