--- a/ejat-parent/ejat-bom/pom.xml
+++ b/ejat-parent/ejat-bom/pom.xml
@@ -22,10 +22,23 @@
 				<artifactId>ejat</artifactId>
 				<version>3.0.0-SNAPSHOT</version>
 			</dependency>
+			
 			<dependency>
 				<groupId>ejat</groupId>
 				<artifactId>ejat-framework</artifactId>
 				<version>3.0.0-SNAPSHOT</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.6</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>1.11</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
