Move maven plugin to separate repo (#67)
* add ejat-obr packaging type

* add commons deps and sonarqube

* Move Maven plugin to separate repo

* correct pom

--- a/ejat-parent/ejat/pom.xml
+++ b/ejat-parent/ejat/pom.xml
@@ -14,7 +14,7 @@
 	<version>3.0.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
-	<name>eJAT Framework</name>
+	<name>eJAT TPI</name>
 
 	<build>
 		<plugins>
