--- a/ejat-parent/ejat-bom/pom.xml
+++ b/ejat-parent/ejat-bom/pom.xml
@@ -7,12 +7,12 @@
 	<parent>
 		<groupId>ejat</groupId>
 		<artifactId>ejat-parent</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>0.2.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>ejat</groupId>
 	<artifactId>ejat-bom</artifactId>
-	<version>3.0.0-SNAPSHOT</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<dependencyManagement>
@@ -20,13 +20,20 @@
 			<dependency>
 				<groupId>ejat</groupId>
 				<artifactId>ejat</artifactId>
-				<version>3.0.0-SNAPSHOT</version>
+				<version>0.2.0-SNAPSHOT</version>
 			</dependency>
 			
 			<dependency>
 				<groupId>ejat</groupId>
 				<artifactId>ejat-framework</artifactId>
-				<version>3.0.0-SNAPSHOT</version>
+				<version>0.2.0-SNAPSHOT</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>ejat</groupId>
+				<artifactId>ejat-obr</artifactId>
+				<version>0.2.0-SNAPSHOT</version>
+				<type>obr</type>
 			</dependency>
 			
 			<dependency>
