Correct obr and parent (#76)

--- a/ejat-parent/ejat-framework/pom.xml
+++ b/ejat-parent/ejat-framework/pom.xml
@@ -15,6 +15,17 @@
 	<packaging>bundle</packaging>
 
 	<name>eJAT Framework</name>
+	
+	<dependencies>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
