--- a/ejat-parent/ejat-framework/pom.xml
+++ b/ejat-parent/ejat-framework/pom.xml
@@ -15,7 +15,32 @@
 	<packaging>bundle</packaging>
 
 	<name>eJAT Framework</name>
-
+	
+	<dependencies>
+		<dependency>
+			<groupId>ejat</groupId>
+			<artifactId>ejat</artifactId>
+			<version>0.2.0-SNAPSHOT</version>
+			<type>bundle</type>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.bundlerepository</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.bcel</groupId>
+		    <artifactId>bcel</artifactId>
+		</dependency>
+	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -24,10 +49,10 @@
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>io.ejat.framework</Bundle-SymbolicName>
+						<Export-Package>io.ejat.framework;version=${pom.version}</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
