--- a/ejat-parent/ejat-framework/pom.xml
+++ b/ejat-parent/ejat-framework/pom.xml
@@ -15,7 +15,7 @@
 	<packaging>bundle</packaging>
 
 	<name>eJAT Framework</name>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>ejat</groupId>
@@ -29,6 +29,10 @@
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.osgi</groupId>
