--- a/ejat-parent/ejat-framework/pom.xml
+++ b/ejat-parent/ejat-framework/pom.xml
@@ -32,6 +32,10 @@
 		    <artifactId>log4j-api</artifactId>
 		</dependency>
 		<dependency>
+    		<groupId>org.apache.commons</groupId>
+    		<artifactId>commons-lang3</artifactId>
+   		</dependency>
+		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.bundlerepository</artifactId>
 		</dependency>
@@ -49,7 +53,7 @@
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>io.ejat.framework</Bundle-SymbolicName>
-						<Export-Package>io.ejat.framework;version=${pom.version}</Export-Package>
+						<Export-Package>io.ejat.framework;version=${project.version}</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
