--- a/ejat-parent/ejat-obr/pom.xml
+++ b/ejat-parent/ejat-obr/pom.xml
@@ -65,13 +65,13 @@
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
-    		<groupId>org.apache.logging.log4j</groupId>
-    		<artifactId>log4j-core</artifactId>
-		</dependency>		
+    		<groupId>commons-logging</groupId>
+    		<artifactId>commons-logging</artifactId>
+		</dependency>
 		<dependency>
-    		<groupId>org.apache.logging.log4j</groupId>
-    		<artifactId>log4j-api</artifactId>
-		</dependency>				
+    		<groupId>log4j</groupId>
+    		<artifactId>log4j</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
