--- a/ejat-parent/ejat-eclipse/pom.xml
+++ b/ejat-parent/ejat-eclipse/pom.xml
@@ -55,6 +55,14 @@
 	                </execution>
 	            </executions>
 	        </plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-p2-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<defaultP2Metadata>false</defaultP2Metadata>
+				</configuration>
+			</plugin>
     	</plugins>
 	</build>
 </project>
