--- a/ejat-parent/pom.xml
+++ b/ejat-parent/pom.xml
@@ -46,6 +46,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
+		<tycho-version>1.4.0</tycho-version>
 	</properties>
 
 	<dependencyManagement>
@@ -323,7 +324,7 @@
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
-				<version>1.4.0</version>
+				<version>${tycho-version}</version>
 				<extensions>true</extensions>
 				<configuration>
 					<environments>
