Add maven support to the boot.jar

--- a/ejat-parent/pom.xml
+++ b/ejat-parent/pom.xml
@@ -17,6 +17,7 @@
 		<module>ejat-bom</module>
 		<module>ejat-obr</module>
 		<module>ejat-boot</module>
+		<module>cirillo-maven-repository</module>
 	</modules>
 
 	<distributionManagement>
