--- a/ejat-parent/pom.xml
+++ b/ejat-parent/pom.xml
@@ -18,6 +18,7 @@
 		<module>ejat-obr</module>
 		<module>ejat-boot</module>
 		<module>cirillo-maven-repository</module>
+		<module>cirillo-k8s-controller</module>
 	</modules>
 
 	<distributionManagement>
