--- a/ejat-parent/ejat-bom/pom.xml
+++ b/ejat-parent/ejat-bom/pom.xml
@@ -22,32 +22,38 @@
 				<artifactId>ejat</artifactId>
 				<version>0.2.0-SNAPSHOT</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>ejat</groupId>
 				<artifactId>ejat-framework</artifactId>
 				<version>0.3.0-SNAPSHOT</version>
 			</dependency>
-			
+
+			<dependency>
+				<groupId>ejat</groupId>
+				<artifactId>cirillo-k8s-controller</artifactId>
+				<version>0.3.0-SNAPSHOT</version>
+			</dependency>
+
 			<dependency>
 				<groupId>ejat</groupId>
 				<artifactId>ejat-obr</artifactId>
 				<version>0.2.0-SNAPSHOT</version>
 				<type>obr</type>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>2.6</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
 				<version>1.11</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>commons-logging</groupId>
 				<artifactId>commons-logging</artifactId>
