--- a/ejat-parent/ejat-framework/pom.xml
+++ b/ejat-parent/ejat-framework/pom.xml
@@ -26,6 +26,7 @@
 			<groupId>ejat</groupId>
 			<artifactId>cirillo-maven-repository</artifactId>
 			<version>0.3.0-SNAPSHOT</version>
+			 <optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
