--- a/ejat-parent/ejat-obr/pom.xml
+++ b/ejat-parent/ejat-obr/pom.xml
@@ -37,6 +37,10 @@
 			<artifactId>ejat-framework</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>ejat</groupId>
+			<artifactId>cirillo-k8s-controller</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.gogo.shell</artifactId>
 		</dependency>
