--- a/ejat-parent/ejat-bom/pom.xml
+++ b/ejat-parent/ejat-bom/pom.xml
@@ -37,6 +37,12 @@
 
 			<dependency>
 				<groupId>ejat</groupId>
+				<artifactId>cirillo-maven-repository</artifactId>
+				<version>0.3.0-SNAPSHOT</version>
+			</dependency>
+
+			<dependency>
+				<groupId>ejat</groupId>
 				<artifactId>ejat-obr</artifactId>
 				<version>0.2.0-SNAPSHOT</version>
 				<type>obr</type>
