--- a/ejat-parent/ejat-framework/pom.xml
+++ b/ejat-parent/ejat-framework/pom.xml
@@ -24,9 +24,9 @@
 		</dependency>
 		<dependency>
 			<groupId>ejat</groupId>
-			<artifactId>cirillo-maven-repository</artifactId>
+			<artifactId>cirillo-maven-repository-spi</artifactId>
 			<version>0.3.0-SNAPSHOT</version>
-			<optional>true</optional>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
