--- a/ejat-parent/ejat-bom/pom.xml
+++ b/ejat-parent/ejat-bom/pom.xml
@@ -42,13 +42,19 @@
 
 			<dependency>
 				<groupId>ejat</groupId>
+			<artifactId>cirillo-maven-repository-spi</artifactId>
+				<version>0.3.0-SNAPSHOT</version>
+			</dependency>
+
+			<dependency>
+				<groupId>ejat</groupId>
 				<artifactId>cirillo-resource-management</artifactId>
 				<version>0.3.0-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
 				<groupId>ejat</groupId>
-			<artifactId>cirillo-maven-repository-spi</artifactId>
+				<artifactId>cirillo-metrics</artifactId>
 				<version>0.3.0-SNAPSHOT</version>
 			</dependency>
 
