naming and boot corrections

--- a/voras-parent/dev.voras.framework.maven.repository/pom.xml
+++ b/voras-parent/dev.voras.framework.maven.repository/pom.xml
@@ -32,6 +32,13 @@
 			<version>3.0.22</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>${commons-logging}</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
