--- a/voras-parent/dev.voras.framework.k8s.controller/pom.xml
+++ b/voras-parent/dev.voras.framework.k8s.controller/pom.xml
@@ -21,6 +21,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>${commons-logging}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>io.prometheus</groupId>
 			<artifactId>simpleclient</artifactId>
 			<version>${prometheus.simpleclient}</version>
@@ -58,7 +64,7 @@
 						<Import-Package>
 							dev.voras.framework,
 							dev.voras.framework.spi,
-							dev.voras.k8s.controller,
+							dev.voras.framework.k8s.controller,
 							org.apache.commons.logging,
 							io.prometheus.client,
 							io.prometheus.client.exporter,
