--- a/voras-parent/dev.voras.framework.metrics/pom.xml
+++ b/voras-parent/dev.voras.framework.metrics/pom.xml
@@ -21,6 +21,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>${commons-logging}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>io.prometheus</groupId>
 			<artifactId>simpleclient</artifactId>
 			<version>${prometheus.simpleclient}</version>
@@ -39,5 +45,5 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-	
+
 </project>
