--- a/voras-parent/voras-boot/pom.xml
+++ b/voras-parent/voras-boot/pom.xml
@@ -33,11 +33,6 @@
 			<version>${dev.voras.framework.maven.repository.spi}</version>
 		</dependency>
 		<dependency>
-			<groupId>dev.voras</groupId>
-			<artifactId>dev.voras.framework.maven.repository</artifactId>
-			<version>${dev.voras.framework.maven.repository}</version>
-		</dependency>
-		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>${commons-cli}</version>
@@ -78,6 +73,7 @@
 						<artifactItem>
 							<groupId>commons-logging</groupId>
 							<artifactId>commons-logging</artifactId>
+							<version>${commons-logging}</version>
 						</artifactItem>
 						<artifactItem>
 							<groupId>log4j</groupId>
@@ -97,6 +93,7 @@
 					</artifactItems>
 					<type>jar</type>
 					<overWrite>false</overWrite>
+					<stripVersion>true</stripVersion>
 					<outputDirectory>${project.build.directory}/bundle</outputDirectory>
 				</configuration>
 			</plugin>
@@ -119,37 +116,37 @@
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>io.ejat.boot.Launcher</Main-Class>
+										<Main-Class>dev.voras.boot.Launcher</Main-Class>
 									</manifestEntries>
 								</transformer>cirillo-maven-rep
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
-									<resource>bundle/dev.voras.framework.maven.repository-${dev.voras.framework.maven.repository}.jar</resource>
+									<resource>bundle/dev.voras.framework.maven.repository.jar</resource>
 									<file>target/bundle/dev.voras.framework.maven.repository.jar</file>
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
-									<resource>bundle/dev.voras.framework.maven.repository.spi-${dev.voras.framework.maven.repository.spi}.jar</resource>
+									<resource>bundle/dev.voras.framework.maven.repository.spi.jar</resource>
 									<file>target/bundle/dev.voras.framework.maven.repository.spi.jar</file>
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
-									<resource>bundle/commons-logging-${commons-logging}.jar</resource>
+									<resource>bundle/commons-logging.jar</resource>
 									<file>target/bundle/commons-logging.jar</file>
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
-									<resource>bundle/log4j-${log4j}.jar</resource>
+									<resource>bundle/log4j.jar</resource>
 									<file>target/bundle/log4j.jar</file>
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
-									<resource>bundle/org.apache.felix.bundlerepository-${felix-bundlerepository}.jar</resource>
+									<resource>bundle/org.apache.felix.bundlerepository.jar</resource>
 									<file>target/bundle/org.apache.felix.bundlerepository.jar</file>
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
-									<resource>bundle/org.apache.felix.scr-${felix.scr}.jar</resource>
+									<resource>bundle/org.apache.felix.scr.jar</resource>
 									<file>target/bundle/org.apache.felix.scr.jar</file>
 								</transformer>
 							</transformers>
