--- a/voras-parent/dev.voras.framework.api.authentication/pom.xml
+++ b/voras-parent/dev.voras.framework.api.authentication/pom.xml
@@ -20,7 +20,12 @@
 			<version>${dev.voras.framework}</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.8.1</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
