--- a/voras-parent/dev.voras.framework.obr/pom.xml
+++ b/voras-parent/dev.voras.framework.obr/pom.xml
@@ -155,6 +155,18 @@
 			<version>${prometheus.hotspot}</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>${commons-collections}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>${commons-lang}</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
