move tracing for dead heartbeat

--- a/voras-parent/voras-boot/src/main/resources/trace-log4j.properties
+++ b/voras-parent/voras-boot/src/main/resources/trace-log4j.properties
@@ -5,7 +5,7 @@ log4j.rootLogger=TRACE, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss.SSS} %p %c.%M - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss.SSS} %p %t %c.%M - %m%n
 
 
 log4j.logger.ftp=INFO
