--- a/voras-parent/dev.voras.framework.obr/pom.xml
+++ b/voras-parent/dev.voras.framework.obr/pom.xml
@@ -167,6 +167,13 @@
 			<version>${commons-lang}</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>${assertj-core}</version>
+			<scope>compile</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
