by default normal galasa bundles do not generate test catalogs

--- a/galasa-parent/pom.xml
+++ b/galasa-parent/pom.xml
@@ -106,6 +106,8 @@
 		<assertj-core>3.11.1</assertj-core>
 
 		<unpackBundle>true</unpackBundle>
+		<galasa.skip.bundletestcatatlog>true</galasa.skip.bundletestcatatlog>
+		<galasa.skip.deploytestcatatlog>true</galasa.skip.deploytestcatatlog>
 	</properties>
 
 
