Switch to snapshot plugin

--- a/galasa-parent/pom.xml
+++ b/galasa-parent/pom.xml
@@ -165,7 +165,7 @@
 				<plugin>
 					<groupId>dev.galasa</groupId>
 					<artifactId>galasa-maven-plugin</artifactId>
-					<version>0.3.0</version>
+					<version>0.3.0-SNAPSHOT</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.felix</groupId>
